--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy
-pandas
-matplotlib
-nltk
 random
 pickle
 streamlit
 pip
-scikit-learn
 sklearn
+numpy>=2.0.0
+pandas>=2.2.0
+matplotlib>=3.7.0
+nltk>=3.9.0
+scikit-learn>=1.5.2
