--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy
-pandas
-matplotlib
-nltk
-random
-pickle
-streamlit
 pip
-scikit-learn
+nltk
 sklearn
+numpy==1.24.3
+pandas==2.0.3
+matplotlib==3.7.2
+nltk==3.8.1
+streamlit==1.27.2
+scikit-learn==1.3.0
+Sastrawi==1.0.1
