--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-pip
-nltk
-numpy==1.24.3
-pandas==2.0.3
-matplotlib==3.7.2
-nltk==3.8.1
-streamlit==1.27.2
-scikit-learn==1.3.0
-Sastrawi==1.0.1
+pip>=24.0
+nltk>=3.8.1
+numpy>=1.24.3
+pandas>=2.0.3
+matplotlib>=3.7.2
+streamlit>=1.27.2
+scikit-learn>=1.3.0
+Sastrawi>=1.0.1
